<resources>
    <string name="app_name">Unit Converter</string>
    <string name="length">Length</string>
    <string name="weight">Weight</string>
    <string name="volume">Volume</string>
    <string name="temperature">Temperature</string>
    <string name="ounce">Ounce</string>
    <string name="pound">Pound</string>
    <string name="stone">Stone</string>
    <string name="milligram">Milligram</string>
    <string name="gram">Gram</string>
    <string name="kilogram">Kilogram</string>
    <string name="weight_converter_heading">Weight Converter</string>
    <string name="length_converter_heading">Length Converter</string>
    <string name="kilometers">Kilometers</string>
    <string name="meters">Meters</string>
    <string name="centimeters">Centimeters</string>
    <string name="millimeters">Millimeters</string>
    <string name="miles">Miles</string>
    <string name="yards">Yards</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="background_image_length">Background Image Length</string>
    <string name="background_image_weight">Background Image Weight</string>
    <string name="volume_converter_heading">Volume Converter</string>
    <string name="background_image_volume">Background Image Volume</string>
    <string name="background_image_temperature">Background Image Temperature</string>
    <string name="temperature_converter_heading">Temperature Converter</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="cubic_meter">Cubic Meter</string>
    <string name="litre">Litre</string>
    <string name="millilitre">Millilitre</string>
    <string name="gallon">Gallon</string>
    <string name="pint">Pint</string>
    <string name="fluid_ounce">Fluid Ounce</string>
    <string name="british_imperial">British Imperial</string>
    <string name="us_customary">US Customary</string>
</resources>