<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="70dp">

        <TextView
            android:id="@+id/text_view_title_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/titleTextAppearance"
            android:gravity="center"
            android:text="@string/volume_converter_heading"
            app:layout_constraintTop_toTopOf="parent"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_title_volume">

            <RadioButton
                android:id="@+id/radio_button_uk"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/icon_uk_selector"
                android:button="@null"
                android:padding="16dp"
                android:checked="true"
                android:contentDescription="@string/british_imperial"/>

            <RadioButton
                android:id="@+id/radio_button_us"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/icon_us_selector"
                android:button="@null"
                android:padding="16dp"
                android:contentDescription="@string/us_customary"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/radio_group">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_cubic_meter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/cubic_meter"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_cubic_meter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    tools:text="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_litre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/litre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_litre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    tools:text="1000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_millilitre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/millilitre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_millilitre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    tools:text="1000000" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_gallon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/gallon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_gallon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    tools:text="0.16" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_pint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/pint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_pint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    tools:text="2.2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_fluid_ounce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/fluid_ounce">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_fluid_ounce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    tools:text="35.27" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
